--- a/.github/workflows/dh_pub.yml
+++ b/.github/workflows/dh_pub.yml
@@ -16,7 +16,7 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: docker.io
-  DH_ACCT: ${{ scrects.DH_USER }}
+  DH_ACCT: ${{ secrcts.DH_USER }}
   DH_USER: ltgc
   DH_PASS: ${{ secrets.DH_PASS }}
 
