--- a/src/opensuse/Dockerfile
+++ b/src/opensuse/Dockerfile
@@ -1,18 +1,18 @@
-FROM docker.io/debian/tumbleweed
+FROM docker.io/opensuse/tumbleweed
 
 # Set working environment up
 WORKDIR /root
 
-# Copy and run shared files
+# Copy and run
 COPY ./shared/etc/ /etc/
 COPY ./shared/sh/ /root/sh/shared
-RUN bash /root/sh/shared/setup.sh
-
-# Copy and run distro-specific files
 COPY ./etc/ /etc/
 COPY ./sh/ /root/sh/distro
+RUN bash /root/sh/distro/init.sh
+RUN bash /root/sh/shared/setup.sh
 RUN bash /root/sh/distro/setup.sh
 
 # Run forever
 EXPOSE 1122
-CMD ["/sbin/init"]
+#CMD ["/sbin/init"]
+CMD ["sleep", "infinity"]
