--- a/src/alpine/Dockerfile
+++ b/src/alpine/Dockerfile
@@ -10,12 +10,12 @@ COPY ./shared/etc/ /etc/
 COPY ./shared/sh/ /root/sh/shared
 COPY ./etc/ /etc/
 COPY ./sh/ /root/sh/distro
-RUN bash /root/sh/distro/init.sh
+RUN sh /root/sh/distro/init.sh
 RUN bash /root/sh/shared/setup.sh
 RUN bash /root/sh/distro/setup.sh
 RUN bash /root/sh/shared/post.sh
 
 # Run forever
 EXPOSE 1122
-#CMD ["/sbin/init"]
-CMD ["sleep", "infinity"]
+CMD ["/sbin/init"]
+#CMD ["sleep", "infinity"]
