--- a/.github/workflows/dh_pub.yml
+++ b/.github/workflows/dh_pub.yml
@@ -41,7 +41,9 @@ jobs:
         run: PATH=./:$PATH bash ./shx submit alpine
       - name: Build and push the Debian flavour
         run: PATH=./:$PATH bash ./shx submit debian
-      - name: Build and push the Fedora flavour
-        run: PATH=./:$PATH bash ./shx submit fedora
       - name: Build and push the openSUSE flavour
         run: PATH=./:$PATH bash ./shx submit opensuse
+      - name: Build and push the Fedora flavour
+        run: PATH=./:$PATH bash ./shx submit fedora
+      - name: Build and push the Rocky flavour
+        run: PATH=./:$PATH bash ./shx submit rocky
