--- a/src/slimdeb/Dockerfile
+++ b/src/slimdeb/Dockerfile
@@ -7,12 +7,12 @@ WORKDIR /root
 
 # Copy and run
 COPY ./shared/etc/ /etc/
-COPY ./shared/sh/ /root/sh/shared
+COPY ./shared/sh/ /root/gel/shared/sh
 COPY ./etc/ /etc/
-COPY ./sh/ /root/sh/distro
-RUN bash /root/sh/shared/setup.sh
-RUN bash /root/sh/distro/setup.sh
-RUN bash /root/sh/shared/post.sh
+COPY ./sh/ /root/gel/distro/sh
+RUN bash /root/gel/shared/sh/setup.sh
+RUN bash /root/gel/distro/sh/setup.sh
+RUN bash /root/gel/shared/sh/post.sh
 
 # Run forever
 EXPOSE 1122
