--- a/src/shared/etc/sysctl.d/netProps.conf
+++ b/src/shared/etc/sysctl.d/netProps.conf
@@ -1,3 +1,4 @@
 net.ipv4.conf.all.forwarding = 1
 net.ipv6.conf.all.forwarding = 1
+net.core.default_qdisc = fq
 net.ipv4.tcp_congestion_control = bbr
