--- a/.github/workflows/dh_pub.yml
+++ b/.github/workflows/dh_pub.yml
@@ -37,19 +37,25 @@ jobs:
           registry: ${{ env.REGISTRY }}
       - name: Generate distributable directory structure
         run: PATH=./:$PATH bash ./shx buildTree
-      - name: Build and push the Alpine flavour
-        run: PATH=./:$PATH bash ./shx submit alpine
+      - name: Build and push the Alpine Slim flavour
+        run: PATH=./:$PATH bash ./shx submit slimalp
       - name: Build and push the Debian Slim flavour
         run: PATH=./:$PATH bash ./shx submit slimdeb
-      - name: Build and push the Debian flavour
-        run: PATH=./:$PATH bash ./shx submit debian
       - name: Build and push the openSUSE Slim flavour
         run: PATH=./:$PATH bash ./shx submit slimsuse
+      - name: Build and push the Alma Slim flavour
+        run: PATH=./:$PATH bash ./shx submit slimalma
+      - name: Build and push the Rocky Slim flavour
+        run: PATH=./:$PATH bash ./shx submit slimrock
+      - name: Build and push the Alpine flavour
+        run: PATH=./:$PATH bash ./shx submit alpine
+      - name: Build and push the Debian flavour
+        run: PATH=./:$PATH bash ./shx submit debian
       - name: Build and push the openSUSE flavour
         run: PATH=./:$PATH bash ./shx submit opensuse
-      - name: Build and push the Rocky Slim flavour
-        run: PATH=./:$PATH bash ./shx submit rocky
+      - name: Build and push the Alma flavour
+        run: PATH=./:$PATH bash ./shx submit alma
       - name: Build and push the Rocky flavour
-        run: PATH=./:$PATH bash ./shx submit slimrock
+        run: PATH=./:$PATH bash ./shx submit rocky
       # - name: Build and push the Fedora flavour
         # run: PATH=./:$PATH bash ./shx submit fedora
