--- a/.github/workflows/dh_pub.yml
+++ b/.github/workflows/dh_pub.yml
@@ -13,6 +13,7 @@ on:
     paths:
       - "build_version"
       - ".github/workflows/**_pub.yml"
+  workflow_dispatch:
 
 env:
   # Use docker.io for Docker Hub if empty
