Made TCP faster under higher latency & loss.

--- a/src/shared/etc/sysctl.d/netNative.conf
+++ b/src/shared/etc/sysctl.d/netNative.conf
@@ -1,2 +1,4 @@
 net.core.default_qdisc = fq
 net.ipv4.tcp_congestion_control = bbr
+net.ipv4.tcp_rmem = 4096 196608 7864320
+net.ipv4.tcp_wmem = 4096 49152 6291456
